--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-root></app-root>
