home page changes

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <app-root></app-root>
